--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,19 @@ header {
   background-color: #303032;
   width: 100%;
   height: 15vh;
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  padding: auto;
+  text-align: center;
+  color: #f0f0f3;
+  font-family: 'Iceland', cursive;
+  font-family: 'Racing Sans One', cursive;
+  font-size: 5vw;
+  letter-spacing: 1vw;
+  text-shadow: 2px 2px #8c8d8e;
 }
 
 .left {
@@ -15,8 +28,34 @@ header {
 .right {
   /*position*/
   float: left;
-  background-color: #f0f0f3;
+  background-color: #f3f0f1;
 
   width: 75%;
   height: 85vh;
+}
+
+.table_container {
+  padding: 2% 7% 0% 7%;
+}
+
+.icons {
+  position: relative;
+  top: 0.5vw;
+  size: 2vw;
+}
+
+.text {
+  flex: 1;
+  align: center;
+  margin-top: 2vh;
+  letter-spacing: 1.5px;
+  font-weight: lighter;
+  text-align: center;
+  font-size: 2vw;
+  font-family:'GlacialIndifferenceRegular';
+}
+
+.colored {
+  color: red;
+  background-color: transparent;
 }
