--- a/View/src/App.css
+++ b/View/src/App.css
@@ -2,6 +2,7 @@ header {
   background-color: #303032;
   width: 100%;
   height: 15vh;
+  box-shadow: 0px 0px 40px -2px rgba(0,0,0,2);
 
   display: flex;
   justify-content: center;
