--- a/View/src/Components/DragAndDrop/DragAndDrop.scss
+++ b/View/src/Components/DragAndDrop/DragAndDrop.scss
@@ -1,4 +1,5 @@
 .container {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   /*position*/
   position: absolute;
   bottom: -5;
@@ -60,6 +61,7 @@
 
   border: black 2px dashed;
   border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .upload_image {
